test/spec_vectors/simd_i8x16_cmp/fail/module_15.wat
(module (func $i8x16.ne-arg-empty (result v128) (i8x16.ne)))